<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_recipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.saentis.project.projectsntis.AddRecipe"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextRezeptName"
        android:hint="Rezeptname" />

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/autoCompleteTextViewAdd1"
        android:hint="@string/ingredient1" />

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/autoCompleteTextViewAdd2"
        android:hint="@string/ingredient2" />

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/autoCompleteTextViewAdd3"
        android:hint="@string/ingredient3" />

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/autoCompleteTextViewAdd4"
        android:hint="@string/ingredient4" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/linkZuRezeptField"
        android:hint="@string/rezeptLink" />

    <Button
        android:text="Zutat hinzufügen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ButtonZutatHinzufügen"
        android:onClick="ZutatHinzufuegen" />

    <Button
        android:text="@string/saveRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addRecipeButton"
        android:onClick="rezeptHinzufuegen" />

    <Button
        android:text="@string/buttenClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:onClick="beenden" />
</LinearLayout>
