<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_output"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.saentis.project.projectsntis.OutputActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:text="@string/outputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="18sp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="346dp"
        android:id="@+id/outputListView" />

    <Button
        android:text="@string/addReciepe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recipeButton" />

    <Button
        android:text="@string/buttenClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonClose"
        android:onClick="Beenden" />

</LinearLayout>
